# seiseiAIchaker

./: .gitignore  DEPLOY.md  LICENSE  Procfile  QUICKSTART.md  README.md  README_NEW.md  USAGE.md  package.json  pyproject.toml  railway.json  render.yaml  requirements.txt  setup.ps1  start-dev-simple.ps1  start-dev.ps1  test_system.py
examples/: sample_works.json
frontend/: README.md  SETUP.md  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/works/: page.tsx
frontend/src/app/works/[id]/: page.tsx
frontend/src/components/: CitationGenerator.tsx  ClaimCardForm.tsx  ClaimCardsList.tsx  Footer.tsx  Header.tsx  ImportSection.tsx  QuickStart.tsx  ReadingScore.tsx  VerificationResults.tsx  WorksList.tsx
frontend/src/lib/: api.ts  utils.ts
refsys/: __init__.py  __main__.py
refsys/cli/: __init__.py
refsys/db/: __init__.py  dao.py  init_db.py  schema.py
refsys/format/: __init__.py
refsys/ingest/: __init__.py
refsys/models/: __init__.py
refsys/position/: __init__.py
refsys/readcheck/: __init__.py
refsys/ui/: __init__.py  app.py
refsys/ui/templates/: base.html  index.html  work_detail.html  works_list.html
refsys/verify/: __init__.py
