[tool.poetry]
name = "refsys"
version = "0.1.0"
description = "正確な参考文献・引用テンプレ自動生成＋実在性/既読検証システム"
authors = ["RefSys Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
httpx = "^0.26.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
aiosqlite = "^0.19.0"
pdfminer-six = "^20221105"
pymupdf = "^1.23.8"
jinja2 = "^3.1.3"
python-dateutil = "^2.8.2"
regex = "^2023.12.25"
whoosh = "^2.7.4"
click = "^8.1.7"
rich = "^13.7.0"

[tool.poetry.scripts]
refsys = "refsys.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
